--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,17 @@
 <resources>
 
     <string name="app_name">Messenger</string>
+    <string name="app_title">Messaging</string>
+
+    <!-- Drawer Items -->
+    <string name="menu_conversations">Conversation List</string>
+    <string name="menu_schedule">Scheduled Messages</string>
+    <string name="menu_contacts">View Contacts</string>
+    <string name="menu_invite">Invite Friends</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_help">Help and Feedback</string>
+    <string name="menu_about">About</string>
+    <string name="menu_search">Search</string>
+    <string name="menu_snooze">Snooze Notifications</string>
 
 </resources>
