begin loading and displaying group mms messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="type_message">Type message</string>
     <string name="type_message_to">Type message to %1$s</string>
     <string name="attach">Attach</string>
+    <string name="message_from">%1$s</string>
+    <string name="message_from_bullet">%1$s  •</string>
 
     <!-- Onboarding Screen -->
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
