--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,10 @@
     <string name="attach_gif">Attach GIF</string>
     <string name="record_video">Record Video</string>
     <string name="record_audio">Record Audio</string>
+    <string name="camera_permission_needed">The camera permission needs to be granted to take
+        pictures!</string>
+    <string name="take_picture">Snap Picture</string>
+    <string name="flip_picture">Flip Camera</string>
 
     <!-- Onboarding Screen -->
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
