add a remove button for attached images and bug fixes on tablet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="take_picture">Snap Picture</string>
     <string name="flip_picture">Flip Camera</string>
     <string name="attached_image">Attached Image</string>
+    <string name="remove_image">Remove Attached Image</string>
 
     <!-- Onboarding Screen -->
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
