--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="menu_mute_contacts">Blacklist</string>
     <string name="menu_invite">Invite Friends</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_account">My Account</string>
     <string name="menu_help">Help and Feedback</string>
     <string name="menu_about">About</string>
     <string name="menu_search">Search</string>
@@ -102,5 +103,23 @@
         <item>OK</item>
         <item>Thanks</item>
     </string-array>
+
+    <!-- About, Help and Feedback and Settings -->
+    <string name="changelog">Changelog</string>
+    <string name="copyright">© 2016 Jake Klinker</string>
+    <string name="copyright_summary">View open source license information</string>
+    <string name="app_version">App Version</string>
+    <string name="device_id">Device ID</string>
+    <string name="device_info">Device Info</string>
+    <string name="beta_disclaimer">This project is still in beta, please report issues that you
+        might find!</string>
+    <string name="faqs">Frequently Asked Questions</string>
+    <string name="google_plus">Google+</string>
+    <string name="google_plus_summary">Messenger Beta Community</string>
+    <string name="email">Email</string>
+    <string name="email_summary">support@klinkerapps.com</string>
+    <string name="twitter">Twitter</string>
+    <string name="twitter_summary">\@KlinkerApps</string>
+    <string name="support">Support</string>
 
 </resources>
