add descriptions to some settings items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,7 +148,9 @@
         <item quantity="other">in %1$d conversations</item>
     </plurals>
     <string name="pin_conversation">Pin Conversation</string>
+    <string name="pin_conversation_summary">Keeps this conversation at the top of the list</string>
     <string name="mute_conversation">Mute Conversation</string>
+    <string name="mute_conversation_summary">Hides notifications for this conversation</string>
     <string name="primary_color">Primary Color</string>
     <string name="primary_dark_color">Primary Color Dark</string>
     <string name="accent_color">Accent Color</string>
