--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,11 @@
     <string name="vibrate">Vibrate</string>
     <string name="theme_settings">Customization</string>
     <string name="dark_theme">Night Theme</string>
+    <string name="blacklist_hint">Type number to blacklist</string>
+    <string name="add_blacklist">%1$s\n\nAre you sure you want to add this blacklist? Messages will
+        no longer be saved when they come from this number and you will not be notified!</string>
+    <string name="remove_blacklist">%1$s\n\nDo you want to delete this blacklist?</string>
+    <string name="blacklist_need_number">You need to enter a phone number to blacklist!</string>
+    <string name="add">Add</string>
 
 </resources>
