--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="saved">Saved to /Download folder!</string>
     <string name="failed_to_save">Failed to save</string>
     <string name="start_recording_audio">Press the button to start recording audio!</string>
+    <string name="audio_recording_error">Error with recording :(</string>
 
     <!-- Compose Screen -->
     <string name="enter_contact_name">Enter Contact Name</string>
