--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
         <item quantity="other">%1$d conversations deleted</item>
     </plurals>
     <string name="undo">Undo</string>
+    <string name="enter_search">Search for…</string>
 
     <!-- Message List Screen -->
     <string name="type_message">Type message</string>
