--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,5 +186,7 @@
     <string name="remove_blacklist">%1$s\n\nDo you want to delete this blacklist?</string>
     <string name="blacklist_need_number">You need to enter a phone number to blacklist!</string>
     <string name="add">Add</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="privacy_policy_summary">View our privacy policy on the web</string>
 
 </resources>
