--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,5 +188,7 @@
     <string name="add">Add</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="privacy_policy_summary">View our privacy policy on the web</string>
+    <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
+        to %1$s?</string>
 
 </resources>
