--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,7 +188,11 @@
     <string name="add">Add</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="privacy_policy_summary">View our privacy policy on the web</string>
+
+    <!-- Scheduled Messages Screen -->
     <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
         to %1$s?</string>
+    <string name="scheduled_message_hint">Message to send…</string>
+    <string name="scheduled_to_hint">Contact to send to…</string>
 
 </resources>
