--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,8 +101,8 @@
     <string name="remove_image">Remove Attached Image</string>
     <string name="permission_needed_for_action">Permissions needed for this action.</string>
     <string name="request_permission">Request Permission</string>
-    <string name="no_messages_with_contact">You don\'t have any messages yet with this contact,
-        time to start up a new conversation!</string>
+    <string name="no_messages_with_contact">You don\'t have any messages in this conversation yet,
+        time to start it up!</string>
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="share_content">Share content…</string>
