--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,6 +202,7 @@
 
     <!-- Encryption -->
     <string name="encrypting_and_uploading">Encrypting and uploading…</string>
+    <string name="encrypting_and_uploading_media">Encrypting and compressing media messages…</string>
     <string name="downloading_and_decrypting">Downloading and decrypting…</string>
 
 </resources>
