link to online faq from the help and feedback section, and add a link to features on the web

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="beta_disclaimer">This project is still in beta, please report issues that you
         might find!</string>
     <string name="faqs">Frequently Asked Questions</string>
+    <string name="features">Features</string>
     <string name="google_plus">Google+</string>
     <string name="google_plus_summary">Messenger Beta Community</string>
     <string name="email">Email</string>
