--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,6 +189,8 @@
         no longer be saved when they come from this number and you will not be notified!</string>
     <string name="remove_blacklist">%1$s\n\nDo you want to delete this blacklist?</string>
     <string name="blacklist_need_number">You need to enter a phone number to blacklist!</string>
+    <string name="no_blacklists">No blacklists</string>
+    <string name="no_blacklists_summary">You can add one with the plus button below!</string>
     <string name="add">Add</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="privacy_policy_summary">View our privacy policy on the web</string>
@@ -209,6 +211,9 @@
     <string name="scheduled_message_hint">Message to send…</string>
     <string name="scheduled_to_hint">Contact to send to…</string>
     <string name="scheduled_message_sent">Scheduled message sent successfully</string>
+    <string name="no_scheduled_messages">No scheduled messages</string>
+    <string name="no_scheduled_messages_summary">You can create a new one with the plus button
+        below!</string>
 
     <!-- Encryption -->
     <string name="encrypting_and_uploading">Encrypting and uploading…</string>
