--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,6 +207,7 @@
         everything else with it? You can always sign up again later!</string>
     <string name="normalize_color_scheme">Or, you can choose a single color that you want to
         base the contact on:</string>
+    <string name="no_apps_found">No apps found to handle this action</string>
 
     <!-- Scheduled Messages Screen -->
     <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
