--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,24 +20,25 @@
     <string name="app_title">Messaging</string>
 
     <!-- Drawer Items -->
-    <string name="menu_conversations">Conversation List</string>
-    <string name="menu_schedule">Scheduled Messages</string>
+    <string name="menu_conversations">Conversation list</string>
+    <string name="menu_schedule">Scheduled messages</string>
     <string name="menu_mute_contacts">Blacklist</string>
-    <string name="menu_invite">Invite Friends</string>
+    <string name="menu_invite">Invite friends</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_account">My Account</string>
-    <string name="menu_help">Help and Feedback</string>
+    <string name="menu_account">My account</string>
+    <string name="menu_help">Help &amp; feedback</string>
     <string name="menu_about">About</string>
     <string name="menu_search">Search</string>
-    <string name="menu_snooze">Snooze Notifications</string>
-    <string name="menu_call">Call Contact</string>
-    <string name="menu_view_contact">View Contact</string>
-    <string name="menu_view_contacts">View Contacts</string>
-    <string name="menu_delete_conversation">Delete Conversation</string>
-    <string name="menu_conversation_information">Conversation Information</string>
-    <string name="menu_conversation_blacklist">Blacklist Contact</string>
-    <string name="menu_contact_settings">Contact Settings</string>
-    <string name="menu_group_settings">Group Settings</string>
+    <string name="menu_snooze">Snooze notifications</string>
+    <string name="menu_call">Call contact</string>
+    <string name="menu_view_contact">View contact</string>
+    <string name="menu_view_contacts">View contacts</string>
+    <string name="menu_delete_conversation">Delete conversation</string>
+    <string name="menu_conversation_information">Conversation information</string>
+    <string name="menu_conversation_blacklist">Blacklist contact</string>
+    <string name="menu_conversation_schedule">Schedule a message</string>
+    <string name="menu_contact_settings">Contact settings</string>
+    <string name="menu_group_settings">Group settings</string>
     <string name="menu_snooze_off">Off</string>
     <string name="menu_snooze_1">1 hour</string>
     <string name="menu_snooze_2">2 hours</string>
