--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_help">Help &amp; feedback</string>
     <string name="menu_about">About</string>
     <string name="menu_search">Search</string>
+    <string name="menu_mobile_only">Mobile Only</string>
     <string name="menu_snooze">Snooze notifications</string>
     <string name="menu_call">Call contact</string>
     <string name="menu_view_contact">View contact</string>
