some message display changes & bug fixes
* add more spacing between sending text and timestamp
* add failed text underneath failed messages
* add a status to the message info window
* catch an exception resizing an image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="mms_image">MMS Image</string>
     <string name="now">Now</string>
     <string name="sending">Sending…</string>
+    <string name="failed">Failed</string>
     <string name="delivered">Message delivered</string>
     <string name="attach_image">Attach Image</string>
     <string name="capture_image">Capture Image</string>
