Quick reply for Android Marshmallow and below
- Transparent activity for quick replies on < 7.0
- Handles wearable, Nougat, and older versions of android in the NotificationService
- Has tablet layout
- Can be debugged
- handles wearable replies from the quick reply activity
- shows conversations
- can be scrolled
- can be easily quit
- updates the read/seen statuses correctly and sends the to the backend
- end action to ime and handle hardkeyboard 'enter' button.
- dismiss the keyboard when sending a message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,4 +234,12 @@
     <string name="downloading_and_decrypting">Downloading and decrypting…</string>
     <string name="decrypting_and_downloading_media">Downloading and decrypting media…</string>
 
+    <!-- Quick Reply -->
+    <string name="audio_message">Audio Message</string>
+    <string name="video_message">Video Message</string>
+    <string name="picture_message">Picture Message</string>
+    <string name="contact_card">Contact Card</string>
+    <string name="conversation_with">Conversation with %1$s</string>
+    <string name="send">Send</string>
+
 </resources>
