--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,6 +217,8 @@
     <string name="normalize_color_scheme">Or, you can choose a single color that you want to
         base the contact on:</string>
     <string name="no_apps_found">No apps found to handle this action</string>
+    <string name="supported_platforms">Supported Platforms</string>
+    <string name="supported_platforms_summary">All the official places that you can access the app from</string>
 
     <!-- Scheduled Messages Screen -->
     <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
