--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="dark_theme">Dark Theme</string>
     <string name="dark_theme_summary_on">Always uses the dark theme</string>
     <string name="dark_theme_summary_off">Switches between dark and light themes</string>
+    <string name="font_size">Font Size</string>
     <string name="blacklist_hint">Type number to blacklist…</string>
     <string name="add_blacklist">%1$s\n\nAre you sure you want to add this blacklist? Messages will
         no longer be saved when they come from this number and you will not be notified!</string>
@@ -220,6 +221,10 @@
     <string name="no_apps_found">No apps found to handle this action</string>
     <string name="supported_platforms">Supported Platforms</string>
     <string name="supported_platforms_summary">All the official places that you can access the app from</string>
+    <string name="font_size_small">Small</string>
+    <string name="font_size_normal">Normal</string>
+    <string name="font_size_large">Large</string>
+    <string name="font_size_extra_large">Extra Large</string>
 
     <!-- Scheduled Messages Screen -->
     <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
